--- a/css/base.css
+++ b/css/base.css
@@ -2,19 +2,17 @@ header {
 	text-align: center;
 	font-family: "Avenir", sans-serif;
 	color: gray;
-	padding: 10px 10px 10px 10px;
+	/*padding: 10px 10px 10px 10px;*/
 	margin-left: auto;
 	margin-right: auto;
 
 }
 
-body {
+* {
 	font-family: "Avenir", Helvetica, sans-serif;
-	max-width: 1245px;
+	/*max-width: 1245px;*/
 	color: #58595B;
 	/*background-image: url(images/struckaxiom.png);*/
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
@@ -22,7 +20,59 @@ body {
 	text-align: center;
 	font-family: "Avenir", "Helvetica", "sans-serif";
 	color: #58595B;
-	font-size: 85px;
-	padding: 10px 10px 10px 80px;
+	font-size: 400%;
 	text-decoration: none;
+}
+
+a, a:link, a:active {
+  text-decoration: none;
+}
+
+#menu-icon {
+  height: 4rem;
+  margin: 2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#menu ul {
+  /* NOTE: We are by defualt hiding the main nav list because we are
+      expecting the UI to be mobile, therefore our new icon menu
+      takes its place. */
+  display: none;
+  padding: 0;
+  list-style: none;
+  clear: both;
+}
+
+#menu:hover ul {
+  display: block;
+}
+
+section {
+  height: 500px;
+  width: 100%;
+  background-color: lightblue;
+  border-style: solid;
+  border-width: 5px;
+  border-color: white;
+}
+
+img {
+  max-width: 100%;
+  display: inline-block;
+}
+
+/*For all media larger than 420px (media other than mobile)*/
+@media all and (min-width: 420px) {
+  h1 {
+    font-size: 500%;
+  }
+  .container{
+    max-width: 960px;
+  }
+  section{
+    max-width: 100%;
+  }
 }
