--- a/css/base.css
+++ b/css/base.css
@@ -8,38 +8,41 @@ header {
 
 }
 
+body {
+  margin: 0;
+}
+
 * {
 	font-family: "Avenir", Helvetica, sans-serif;
-	/*max-width: 1245px;*/
-	color: #58595B;
-	/*background-image: url(images/struckaxiom.png);*/
+  box-sizing: border-box;
 }
 
 
 #title{
 	text-align: center;
 	font-family: "Avenir", "Helvetica", "sans-serif";
-	color: #58595B;
 	font-size: 400%;
 	text-decoration: none;
+  /*margin-top: 50%;*/
 }
 
 a, a:link, a:active {
   text-decoration: none;
+  color: inherit;
+}
+
+#menu {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 #menu-icon {
   height: 4rem;
   margin: 2rem;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 #menu ul {
-  /* NOTE: We are by defualt hiding the main nav list because we are
-      expecting the UI to be mobile, therefore our new icon menu
-      takes its place. */
   display: none;
   padding: 0;
   list-style: none;
@@ -51,12 +54,12 @@ a, a:link, a:active {
 }
 
 section {
-  height: 500px;
+  height: 100vh;
   width: 100%;
-  background-color: lightblue;
-  border-style: solid;
-  border-width: 5px;
-  border-color: white;
+  padding: 0 7%;
+  display: table;
+  margin: 0;
+  max-width: none;
 }
 
 img {
@@ -64,6 +67,20 @@ img {
   display: inline-block;
 }
 
+.even {
+  background-color: rgb(77,77,77);
+  color: white;
+}
+
+.odd {
+  background-color: white;
+  color: rgb(77,77,77);
+}
+
+.container {
+  display: table-cell;
+  vertical-align: middle;
+}
 /*For all media larger than 420px (media other than mobile)*/
 @media all and (min-width: 420px) {
   h1 {
@@ -75,4 +92,20 @@ img {
   section{
     max-width: 100%;
   }
+}
+
+/* Grid FROM SKELETON, TEST
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; }
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
