--- a/css/base.css
+++ b/css/base.css
@@ -32,7 +32,7 @@ a, a:link, a:active {
 }
 
 nav {
-  position: fixed;
+  /*position: fixed;*/
   top: 0;
   left: 0;
 }
@@ -43,10 +43,11 @@ nav img {
 }
 
 nav ul {
-  display: none;
+  /*display: none;*/
   padding: 0;
   list-style: none;
   clear: both;
+	z-index: 10;
 }
 
 nav:hover ul {
