--- a/css/base.css
+++ b/css/base.css
@@ -32,9 +32,10 @@ a, a:link, a:active {
 }
 
 nav {
-  /*position: fixed;*/
+  position: fixed;
   top: 0;
   left: 0;
+	z-index: 100;
 }
 
 nav img {
@@ -47,11 +48,14 @@ nav ul {
   padding: 0;
   list-style: none;
   clear: both;
-	z-index: 10;
 }
 
-nav:hover ul {
+/*nav:hover ul {
   display: block;
+}*/
+
+nav ul li {
+	z-index: 1000;
 }
 
 section {
