--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 * {
 	font-family: "adelle", "Avenir", Helvetica, sans-serif;
   box-sizing: border-box;
-	text-align: center;
+	text-align: left;
 }
 
 body {
@@ -48,12 +48,12 @@ a, a:link, a:active {
 
 p {
 	text-align: left;
-	max-width: 100%;
+	/*max-width: 100%;*/
 	line-height: 200%;
 }
 #about-h1 {
 	text-align: left;
-	max-width: 100%;
+	/*max-width: 100%;*/
 	margin: 0px;
 	/*line-height: 200%;*/
 
@@ -75,6 +75,15 @@ img {
 	width: 400px;
 	max-width: 35%;
 	background-image: url("../images/about.svg");
-	backround-size: cover;
+	/*background-size: cover;*/
 	background-repeat: no-repeat;
+}
+
+.circle {
+	height: 15px;
+	width: 15px;
+	background-color: white;
+	border-radius: 15px;
+	margin: 5px;
+	display: inline-block;
 }
