Finished qualitative skills section

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,10 +18,19 @@
   align-items: center;
 }
 
+.col {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+  /*max-width: 50%;*/
+}
+
 .column {
   flex-direction: column;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap-reverse;
   max-width: 55%;
+  /*margin-left: 4%;*/
 }
