--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,9 @@
 	font-family: "adelle", "Avenir", Helvetica, sans-serif;
   box-sizing: border-box;
 	text-align: left;
+	border-width: thin;
+	border-color: black;
+	border-style: solid;
 }
 
 body {
@@ -87,4 +90,9 @@ img {
 	border-radius: 15px;
 	margin: 5px;
 	display: inline-block;
+}
+
+.circle-container {
+	height: 30px;
+	width: 140px;
 }
