--- a/css/layout.css
+++ b/css/layout.css
@@ -22,6 +22,14 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  align-items:baseline;
+  /*max-width: 50%;*/
+}
+
+.sub-col {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   /*max-width: 50%;*/
 }
