--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@ header {
 section {
   height: 100vh;
   width: 100%;
-  padding: 0 7%;
+  padding: 7%;
   display: table;
   margin: 0;
   max-width: none;
@@ -35,6 +35,18 @@ section:nth-child(odd) {
   background-color: white;
   color: rgb(77,77,77);
 }
+
+footer {
+	background-color: rgb(77,77,77);
+	/*height: 50px;*/
+	width: 100%;
+  color: #c8c8c8;
+  background-color: #505150;
+  text-align: center;
+  padding: 2rem 0rem;
+}
+
+
 
 h1, h2, h3 {
 	font-family: "proxima-nova", "Avenir", Helvetica, "sans-serif";
@@ -140,6 +152,10 @@ li {
 	height: 22.73px;
 	width: 140px;
 }
+
+/*#copyright {
+	text-align: center;
+}*/
 
 /*.circle-container {
 	height: 30px;
