--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 * {
-	font-family: "adelle", "Avenir", Helvetica, sans-serif;
+	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
 	text-align: left;
 	/*border-width: thin;
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-	color: gray;
+	color: pink;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -27,13 +27,13 @@ section {
 }
 
 section:nth-child(even) {
-  background-color: rgb(77,77,77);
+  background-color: rgb(51,51,51);
   color: white;
 }
 
 section:nth-child(odd) {
   background-color: white;
-  color: rgb(77,77,77);
+  color: rgb(51,51,51);
 }
 
 footer {
@@ -130,18 +130,18 @@ li {
 	background-repeat: no-repeat;
 }
 
-.white {
+.black {
 	height: 15px;
 	width: 15px;
-	background-color: white;
+	background-color: rgb(31,31,31);
 	border-radius: 15px;
 	margin: 3px;
 	display: inline-block;
 }
-.black {
+.white {
 	height: 15px;
 	width: 15px;
-	background-color: black;
+	background-color: white;
 	border-radius: 15px;
 	margin: 3px;
 	display: inline-block;
