--- a/css/base.css
+++ b/css/base.css
@@ -2,20 +2,20 @@
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
 	text-align: left;
-	/*border-width: thin;
+	border-width: thin;
 	border-color: black;
-	border-style: solid;*/
+	border-style: solid;
 }
 
 body {
   margin: 0;
 }
 
-header {
+/*header {
 	color: pink;
 	margin-left: auto;
 	margin-right: auto;
-}
+}*/
 
 section {
   height: 100vh;
@@ -101,6 +101,7 @@ li {
 	position: relative;
   float: left;
   width:  100%;
+	/*min-height: 80%;*/
   height: 220px;
 	margin-top: 10px;
 	margin-bottom: 10px;
@@ -120,12 +121,19 @@ li {
 	text-decoration: none;
 }
 
+a:hover {
+	color: rgb(150,150,150);
+}
+
 #about-img {
-	height: 200px;
-	width: 320px;
+	/*height: 200px;
+	width: 320px;*/
+	width:  100%;
+  height: 200px;
 	/*max-width: 35%;*/
 	min-width: 35%;
 	background-image: url("../images/about.svg");
+	background-position: 50% 50%;
 	/*background-size: cover;*/
 	background-repeat: no-repeat;
 }
