--- a/css/layout.css
+++ b/css/layout.css
@@ -14,8 +14,20 @@
 .row {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+}
+
+#skills .container .row {
+  /*align-items: center;
+  justify-content: space-around;*/
+  /*width: 100%;*/
+  width:100%;
+  /*display: flex;*/
+  /*flex-wrap: wrap;*/
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
 .col {
