Finished revising styles, alignment, and mobile optimization

--- a/css/base.css
+++ b/css/base.css
@@ -2,9 +2,9 @@
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
 	text-align: left;
-	border-width: thin;
+	/*border-width: thin;
 	border-color: black;
-	border-style: solid;
+	border-style: solid;*/
 }
 
 body {
