--- a/css/layout.css
+++ b/css/layout.css
@@ -40,7 +40,7 @@
 
 .sub-col {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
   /*max-width: 50%;*/
