--- a/css/base.css
+++ b/css/base.css
@@ -2,25 +2,19 @@
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
 	text-align: left;
-	/*border-width: thin;
-	border-color: black;
-	border-style: solid;*/
 }
 
 body {
   margin: 0;
 }
 
-/*header {
-	color: pink;
-	margin-left: auto;
-	margin-right: auto;
-}*/
-
 section {
   height: 100vh;
   width: 100%;
-	padding: 10.5%;
+	padding-top: 7%;
+	padding-bottom: 7%;
+	padding-left: 10.5%;
+	padding-right:10.5%;
   display: table;
   margin: 0;
   max-width: none;
@@ -38,15 +32,12 @@ section:nth-child(odd) {
 
 footer {
 	background-color: rgb(77,77,77);
-	/*height: 50px;*/
 	width: 100%;
   color: #c8c8c8;
   background-color: #505150;
   text-align: center;
   padding: 2rem 0rem;
 }
-
-
 
 h1, h2, h3 {
 	font-family: "proxima-nova", "Avenir", Helvetica, "sans-serif";
@@ -63,49 +54,22 @@ a, a:link, a:active {
 
 p {
 	text-align: left;
-	/*max-width: 100%;*/
 	line-height: 200%;
 }
 
 li {
 	list-style: none;
-	/*height: 22px;*/
 }
+
 #about-h1 {
 	text-align: left;
-	/*max-width: 100%;*/
 	margin: 0;
-	/*line-height: 200%;*/
-
 }
-
-/*#tech {
-	min-width: 282px;
-}*/
-
-/*.four.columns {
-
-	display: flex;
-	justify-content: center;
-	min-width: 300px;
-	width: 30.6666666667%;
-	display: inline-block;
-}
-
-.eight.columns {
-	min-width: 300px;
-	width: 65.3333333333%;
-	display: inline-block;
-}*/
 
 .work-img {
-  /*width: 100%;
-	height: auto;
-  display: inline-block;*/
 	position: relative;
   float: left;
   width:  100%;
-	/*min-height: 80%;*/
   height: 220px;
 	margin-top: 10px;
 	margin-bottom: 10px;
@@ -130,15 +94,11 @@ a:hover {
 }
 
 #about-img {
-	/*height: 200px;
-	width: 320px;*/
 	width:  100%;
   height: 200px;
-	/*max-width: 35%;*/
 	min-width: 35%;
 	background-image: url("../images/about.svg");
 	background-position: 50% 50%;
-	/*background-size: cover;*/
 	background-repeat: no-repeat;
 }
 
@@ -164,12 +124,3 @@ a:hover {
 	height: 22.73px;
 	width: 140px;
 }
-
-/*#copyright {
-	text-align: center;
-}*/
-
-/*.circle-container {
-	height: 30px;
-	width: 140px;
-}*/
