--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,24 @@
+section {
+  height: 100vh;
+  width: 100%;
+	padding: 7% 10.5% 7% 10.5%;
+  display: table;
+  margin: 0;
+  max-width: none;
+}
+
+footer {
+	background-color: rgb(77,77,77);
+	width: 100%;
+  color: #c8c8c8;
+  background-color: #505150;
+  text-align: center;
+  padding: 2rem 0rem;
+}
+
 .container {
   position: relative;
   width: 100%;
-  max-width: 850px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
@@ -17,18 +34,6 @@
   align-items: center;
 }
 
-#skills .container .row {
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.col {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items:baseline;
-}
-
 .sub-col {
   display: flex;
   justify-content: flex-start;
@@ -36,10 +41,7 @@
   align-items: center;
 }
 
-.column {
-  flex-direction: column;
-  display: flex;
+#skills .container .row {
   justify-content: space-around;
-  flex-wrap: wrap-reverse;
-  max-width: 55%;
+  align-items: flex-start;
 }
