--- a/css/module.css
+++ b/css/module.css
@@ -21,6 +21,50 @@ nav ul li ul {
   margin-left: 1rem;
 }
 
-nav:hover ul {
-  display: block;
+.work-img {
+	position: relative;
+  float: left;
+  width:  100%;
+  height: 220px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.black {
+	height: 15px;
+	width: 15px;
+	background-color: rgb(31,31,31);
+	border-radius: 15px;
+	margin: 3px;
+	display: inline-block;
+}
+.white {
+	height: 15px;
+	width: 15px;
+	background-color: white;
+	border-radius: 15px;
+	margin: 3px;
+	display: inline-block;
+}
+
+.sub-col > div {
+	display: inline-block;
+	height: 22.73px;
+	width: 140px;
+}
+
+#home .container h1 {
+	text-align: center;
+}
+
+#about-img {
+	width:  100%;
+  height: 200px;
+	min-width: 45%;
+	background-image: url("../images/about.svg");
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
 }
