Moved around img/work files, changed about section to objective

--- a/css/layout.css
+++ b/css/layout.css
@@ -45,3 +45,7 @@ footer {
   justify-content: space-around;
   align-items: flex-start;
 }
+
+#about .container .row {
+  align-items: flex-start;
+}
