--- a/css/base.css
+++ b/css/base.css
@@ -1,16 +1,16 @@
 * {
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
-	text-align: left;
+	/*text-align: left;*/
 }
 
 body {
   margin: 0;
 }
 
-h1, h2, h3 {
-	font-family: "proxima-nova", "Avenir", Helvetica, "sans-serif";
-}
+/*h1, h2, h3 {
+	font-family: "proxima-nova", "Avenir Next", Helvetica, "sans-serif";
+}*/
 
 h1 {
 	font-size: 5rem;
@@ -22,7 +22,7 @@ a, a:link, a:active {
 }
 
 p {
-	line-height: 200%;
+	line-height: 2;
 }
 
 li {
@@ -38,4 +38,8 @@ section:nth-of-type(odd){
 section:nth-of-type(even) {
   background-color: white;
   color: rgb(51,51,51);
+}
+
+#home {
+	background-image: url("../images/background.jpg");
 }
