--- a/css/layout.css
+++ b/css/layout.css
@@ -1,16 +1,16 @@
 section {
   height: 100vh;
   width: 100%;
-	padding: 7% 10.5% 7% 10.5%;
+	padding: 7% 10.5%;
   display: table;
   margin: 0;
-  max-width: none;
+  /*max-width: none;*/
 }
 
 footer {
 	background-color: rgb(77,77,77);
 	width: 100%;
-  height: auto;
+  /*height: auto;*/
   color: #c8c8c8;
   background-color: #505150;
   text-align: center;
@@ -22,7 +22,6 @@ footer {
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box;
 	display: table-cell;
 	vertical-align: middle;
 }
