--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,7 @@
 * {
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
+	border: solid 1px black;
 	/*text-align: left;*/
 }
 
@@ -36,10 +37,35 @@ section:nth-of-type(odd){
 }
 
 section:nth-of-type(even) {
-  background-color: white;
-  color: rgb(51,51,51);
+  background-color:  #cec8c8;
+  color: #171f1f;
 }
 
 #home {
-	background-image: url("../images/background.jpg");
+	background: white url('../images/background.jpg') no-repeat top;
+}
+
+#overlay {
+	background-color: rgba(0, 0, 0, 0.8);
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	display: none;
+	z-index: 1000;
+	vertical-align: middle;
+	display: table-cell;
+}
+
+#overlay ul {
+	display: flex;
+flex-direction: column;
+justify-content: center;
+	height: 100%;
+}
+
+#overlay ul li {
+	font-size: 5rem;
+	text-align: center;
+	color: white;
+
 }
