--- a/css/base.css
+++ b/css/base.css
@@ -1,17 +1,53 @@
+/*For all media larger than 420px (media other than mobile)*/
+/*TODO: increase screen width minimums, change font to rems or ems, test on mobile with Chro developer tools*/
+@media all and (min-width: 420px) {
+	#home .container h1 {
+		font-size: 500%;
+	}
+	h1 {
+    font-size: 400%;
+  }
+	h2 {
+    font-size: 320%;
+  }
+	h3 {
+    font-size: 240%;
+  }
+  .container{
+    max-width: 850px;
+  }
+  section{
+    max-width: 100%;
+  }
+	#overlay ul li a {
+		font-size: 200%;
+	}
+
+}
+
+a:hover {
+	color: rgb(150,150,150);
+}
+
+#overlay a:hover {
+	background-color: white;
+}
+
+.work-img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
 * {
 	font-family: "Avenir Next", Helvetica, sans-serif;
   box-sizing: border-box;
-	border: solid 1px black;
+	/*border: solid 1px black;*/
 	/*text-align: left;*/
 }
 
 body {
   margin: 0;
 }
-
-/*h1, h2, h3 {
-	font-family: "proxima-nova", "Avenir Next", Helvetica, "sans-serif";
-}*/
 
 h1 {
 	font-size: 5rem;
@@ -49,17 +85,15 @@ section:nth-of-type(even) {
 	background-color: rgba(0, 0, 0, 0.8);
 	position: fixed;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	display: none;
 	z-index: 1000;
-	vertical-align: middle;
-	display: table-cell;
 }
 
 #overlay ul {
 	display: flex;
-flex-direction: column;
-justify-content: center;
+	flex-direction: column;
+	justify-content: center;
 	height: 100%;
 }
 
@@ -67,5 +101,127 @@ justify-content: center;
 	font-size: 5rem;
 	text-align: center;
 	color: white;
+	line-height: 2.75;
+}
 
+#overlay a {
+	width: 50%;
+	display: inline-block;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+	z-index: 10000;
+  margin: 2rem;
+}
+
+nav img {
+  height: 4rem;
+  margin-bottom: 1rem;
+}
+
+/*nav ul {
+  display: none;
+  clear: both;
+  color: black;
+}*/
+
+/*nav ul li ul {
+  margin-left: 1rem;
+}*/
+
+/*TODO: review Treehouse background image properties*/
+.work-img {
+	position: relative;
+  float: left;
+  width:  100%;
+  height: 220px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*TODO: create a third class, .dot to contain properties both .white and .black share*/
+.black {
+	height: 15px;
+	width: 15px;
+	background-color: rgb(31,31,31);
+	border-radius: 15px;
+	margin: 3px;
+	display: inline-block;
+}
+
+.white {
+	height: 15px;
+	width: 15px;
+	background-color: white;
+	border-radius: 15px;
+	margin: 3px;
+	display: inline-block;
+}
+
+.sub-col > div {
+	display: inline-block;
+	height: 22.73px;
+	width: 140px;
+}
+
+#home .container h1 {
+	text-align: center;
+}
+
+section {
+  height: 100vh;
+  width: 100%;
+	padding: 7% 10.5%;
+  display: table;
+  margin: 0;
+  /*max-width: none;*/
+}
+
+footer {
+	background-color: rgb(77,77,77);
+	width: 100%;
+  /*height: auto;*/
+  color: #c8c8c8;
+  background-color: #505150;
+  text-align: center;
+  padding: 3%;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.sub-col {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+#skills .container .row {
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+#about .container .row {
+  align-items: flex-start;
 }
