--- a/css/base.css
+++ b/css/base.css
@@ -1,28 +1,82 @@
-/*For all media larger than 420px (media other than mobile)*/
-/*TODO: increase screen width minimums, change font to rems or ems, test on mobile with Chro developer tools*/
-@media all and (min-width: 420px) {
-	#home .container h1 {
-		font-size: 500%;
-	}
-	h1 {
-    font-size: 400%;
-  }
-	h2 {
-    font-size: 320%;
-  }
-	h3 {
-    font-size: 240%;
-  }
-  .container{
-    max-width: 850px;
-  }
-  section{
-    max-width: 100%;
-  }
-	#overlay ul li a {
-		font-size: 200%;
-	}
+/* =================================
+  Base Element Styles
+==================================== */
 
+* {
+  box-sizing: border-box;
+	/*border: solid 1px black;*/
+}
+
+body {
+	font-family: "Avenir Next", Helvetica, sans-serif;
+  margin: 0;
+	line-height: 1.8;
+}
+
+h1 {
+	font-size: 5rem;
+}
+
+a, a:link, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+li {
+	list-style: none;
+	font-size: 110%;
+}
+
+#home {
+	background: white url('../images/background.jpg') no-repeat 50% 0%;
+	text-align: center;
+	color:  white;
+}
+
+#about {
+	background-color: rgba(178, 179, 188, 1); /*purple*/
+	color: rgba(23, 31, 44, 1); /*almost black*/
+}
+
+#skills {
+	background-color: rgba(23, 31, 44, 0.8); /*almost black*/
+	color: white;
+}
+
+#work {
+	background-color:  rgba(206, 200, 187, 0.2); /*off white*/
+	color: rgba(23, 31, 44, 1); /*almost black*/
+}
+
+.work-img {
+	position: relative;
+  float: left;
+  width:  100%;
+  height: 220px;
+	margin: 10px auto;
+	background: no-repeat 0% 0%/cover;
+}
+
+.sub-col > div {
+	display: inline-block;
+	height: 22.73px;
+	width: 140px;
+}
+
+.dot {
+	height: 15px;
+	width: 15px;
+	margin: 3px;
+	display: inline-block;
+	border-radius: 15px;
+}
+
+.black {
+	background-color: rgba(23, 31, 44, 0.4);
+}
+
+.white {
+	background-color: white;
 }
 
 a:hover {
@@ -38,47 +92,23 @@ a:hover {
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-* {
-	font-family: "Avenir Next", Helvetica, sans-serif;
-  box-sizing: border-box;
-	/*border: solid 1px black;*/
-	/*text-align: left;*/
+
+/* =================================
+  Base Layout Styles
+==================================== */
+
+/* ---- Navigation ---- */
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+	z-index: 10000;
+  margin: 1rem;
 }
 
-body {
-  margin: 0;
-}
-
-h1 {
-	font-size: 5rem;
-}
-
-a, a:link, a:active {
-  text-decoration: none;
-  color: inherit;
-}
-
-p {
-	line-height: 2;
-}
-
-li {
-	list-style: none;
-}
-
-/*Use nth of type rather than nth child to optimize for Safari & Chrome*/
-section:nth-of-type(odd){
-  background-color: rgb(51,51,51);
-  color: white;
-}
-
-section:nth-of-type(even) {
-  background-color:  #cec8c8;
-  color: #171f1f;
-}
-
-#home {
-	background: white url('../images/background.jpg') no-repeat top;
+nav img {
+  height: 3.5rem;
 }
 
 #overlay {
@@ -98,99 +128,24 @@ section:nth-of-type(even) {
 }
 
 #overlay ul li {
-	font-size: 5rem;
+	font-size: 4rem;
 	text-align: center;
 	color: white;
 	line-height: 2.75;
 }
 
 #overlay a {
-	width: 50%;
+	width: 100%;
 	display: inline-block;
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-	z-index: 10000;
-  margin: 2rem;
-}
-
-nav img {
-  height: 4rem;
-  margin-bottom: 1rem;
-}
-
-/*nav ul {
-  display: none;
-  clear: both;
-  color: black;
-}*/
-
-/*nav ul li ul {
-  margin-left: 1rem;
-}*/
-
-/*TODO: review Treehouse background image properties*/
-.work-img {
-	position: relative;
-  float: left;
-  width:  100%;
-  height: 220px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-  background-position: 0% 0%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/*TODO: create a third class, .dot to contain properties both .white and .black share*/
-.black {
-	height: 15px;
-	width: 15px;
-	background-color: rgb(31,31,31);
-	border-radius: 15px;
-	margin: 3px;
-	display: inline-block;
-}
-
-.white {
-	height: 15px;
-	width: 15px;
-	background-color: white;
-	border-radius: 15px;
-	margin: 3px;
-	display: inline-block;
-}
-
-.sub-col > div {
-	display: inline-block;
-	height: 22.73px;
-	width: 140px;
-}
-
-#home .container h1 {
-	text-align: center;
-}
-
+/* ---- Layout Containers ---- */
 section {
   height: 100vh;
   width: 100%;
-	padding: 7% 10.5%;
+	padding: 7% 7% 7% 12%;
   display: table;
   margin: 0;
-  /*max-width: none;*/
-}
-
-footer {
-	background-color: rgb(77,77,77);
-	width: 100%;
-  /*height: auto;*/
-  color: #c8c8c8;
-  background-color: #505150;
-  text-align: center;
-  padding: 3%;
 }
 
 .container {
@@ -217,11 +172,52 @@ footer {
   align-items: center;
 }
 
-#skills .container .row {
+footer {
+	width: 100%;
+	color: rgba(23, 31, 44, 0.5); /*almost black*/
+	background-color: rgba(180, 188, 177, 1); /*green tea green*/
+  text-align: center;
+  padding: 3%;
+}
+
+
+#skills .container .row, #about .container .row  {
   justify-content: space-around;
   align-items: flex-start;
 }
 
-#about .container .row {
-  align-items: flex-start;
+
+/*For all media larger than 420px (media other than mobile)*/
+/*TODO: increase screen width minimums, change font to rems or ems, test on mobile with Chro developer tools*/
+@media (min-width: 769px) {
+
+	h1 {
+    font-size: 400%;
+  }
+	h2 {
+    font-size: 320%;
+  }
+	h3 {
+    font-size: 240%;
+  }
+
+	#home .container h1 {
+		font-size: 500%;
+	}
+
+  .container{
+    max-width: 850px;
+  }
+
+	#overlay ul li a {
+		font-size: 120%;
+	}
+
+	nav {
+		padding: 2rem;
+	}
+	nav img {
+		height: 5rem;
+	}
+
 }
