--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,6 @@
 
 * {
   box-sizing: border-box;
-	/*border: solid 1px black;*/
 }
 
 body {
@@ -28,13 +27,13 @@ li {
 }
 
 #home {
-	background: white url('../images/background.jpg') no-repeat 50% 0%;
+	background: white url('../images/background.jpg') no-repeat 50% 0%/cover;
 	text-align: center;
 	color:  white;
 }
 
 #about {
-	background-color: rgba(178, 179, 188, 1); /*purple*/
+	background-color: rgba(180, 188, 177, 1); /*green tea green*/
 	color: rgba(23, 31, 44, 1); /*almost black*/
 }
 
@@ -80,11 +79,7 @@ li {
 }
 
 a:hover {
-	color: rgb(150,150,150);
-}
-
-#overlay a:hover {
-	background-color: white;
+	color: rgba(23, 31, 44, 0.5);
 }
 
 .work-img:hover {
@@ -112,7 +107,7 @@ nav img {
 }
 
 #overlay {
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(20, 20, 20, 0.9);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -139,6 +134,11 @@ nav img {
 	display: inline-block;
 }
 
+#overlay a:hover {
+	color: rgba(255, 255, 255, 0.5);
+}
+
+
 /* ---- Layout Containers ---- */
 section {
   height: 100vh;
@@ -146,6 +146,7 @@ section {
 	padding: 7% 7% 7% 12%;
   display: table;
   margin: 0;
+
 }
 
 .container {
@@ -174,10 +175,10 @@ section {
 
 footer {
 	width: 100%;
-	color: rgba(23, 31, 44, 0.5); /*almost black*/
-	background-color: rgba(180, 188, 177, 1); /*green tea green*/
+	color: rgba(23, 31, 44, 0.8); /*almost black*/
   text-align: center;
   padding: 3%;
+	background-color: rgb(120, 120, 120);
 }
 
 
@@ -187,8 +188,7 @@ footer {
 }
 
 
-/*For all media larger than 420px (media other than mobile)*/
-/*TODO: increase screen width minimums, change font to rems or ems, test on mobile with Chro developer tools*/
+/*For all media larger than 769px (media other than mobile)*/
 @media (min-width: 769px) {
 
 	h1 {
