--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,7 @@
 
 * {
   box-sizing: border-box;
-  /*border: solid 1px black;*/
+  /*border: solid 1px white;*/
 
 }
 
@@ -31,38 +31,46 @@ li {
 #home {
 	/*background: black url('../images/background.jpg') no-repeat 50% 0%/cover;*/
   color:  white;
-  vertical-align: center;
+  /*vertical-align: center;*/
   background-color: black;
+  position: relative;
 }
 
-#home .row {
+#home .home-box {
   /*justify-content: space-around;*/
-  margin-top: 50%;
-  max-width: 850;
+  /*margin-top: 50vh;*/
+  max-width: 700px;
   text-align: right;
   border-right: solid 2px white;
-  display: block;
-
+  /*display: block;*/
+  padding-right: 7%;
+  margin-bottom: 7%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 15%;
+  /*max-width: */
   /*margin: 0;*/
 }
 #home h1 {
-  width: 70%;
+  /*width: 70%;*/
   /*display: inline-block;*/
   /*margin-top: 0;*/
   /*padding-right: 10%;*/
   /*border-right: solid 2px white;*/
 }
 
-#home .vertical-line {
+/*#home .vertical-line {
   border-left: 3px solid white;
   height: 180px;
   padding-left: 30px;
   margin-left: 30px;
   display: none;
-}
+}*/
 
 #home ul {
   margin: 0;
+
 }
 
 #home ul li {
@@ -194,6 +202,7 @@ section {
   padding: 0 20px;
 	display: table-cell;
 	vertical-align: middle;
+  max-width: 850px;
 }
 
 .row {
@@ -227,7 +236,7 @@ footer {
 
 
 /*For all media larger than 769px (media other than mobile)*/
-@media (min-width: 769px) {
+@media only screen and (min-width: 769px) {
 
 	h1 {
     font-size: 400%;
@@ -239,29 +248,28 @@ footer {
     font-size: 240%;
   }
 
-  #home .row {
+  #home .home-box {
     /*justify-content: space-around;*/
-    border: none;
-    display: flex;
+    /*border: none;
+    display: flex;*/
+    margin-top: 30%;
   }
 
 	#home h1 {
 		font-size: 500%;
 	}
 
-  #home .vertical-line {
+  /*#home .vertical-line {
     display: block;
-  }
+  }*/
 
 
-  #home li {
-    text-align: left;
-    font-size: 200%;
-  }
-
-
-  .container{
-    max-width: 850px;
+  #home ul li {
+    /*text-align: left;*/
+    font-size: 180%;
+    display: inline-block;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 
 	#overlay ul li a {
