--- a/css/base.css
+++ b/css/base.css
@@ -28,69 +28,45 @@ li {
 	font-size: 110%;
 }
 
+/*odd sections*/
+section:nth-child(2n+1){
+  background-color: rgb(10,18,20);
+  color: #FAFAFA;
+}
+
+/*even sections*/
+section:nth-child(2n){
+  background-color: #FAFAFA;
+  color: rgb(10,18,20);
+}
+
+
 #home {
 	/*background: black url('../images/background.jpg') no-repeat 50% 0%/cover;*/
-  color:  white;
-  /*vertical-align: center;*/
-  background-color: black;
+  /*color:  white;
+  background-color: black;*/
   position: relative;
 }
 
 #home .home-box {
-  /*justify-content: space-around;*/
-  /*margin-top: 50vh;*/
   max-width: 700px;
   text-align: right;
   border-right: solid 2px white;
-  /*display: block;*/
   padding-right: 7%;
-  margin-bottom: 7%;
+  margin-bottom: 15%;
   position: absolute;
   bottom: 0;
   right: 0;
   margin-right: 15%;
-  /*max-width: */
-  /*margin: 0;*/
 }
-#home h1 {
-  /*width: 70%;*/
-  /*display: inline-block;*/
-  /*margin-top: 0;*/
-  /*padding-right: 10%;*/
-  /*border-right: solid 2px white;*/
-}
-
-/*#home .vertical-line {
-  border-left: 3px solid white;
-  height: 180px;
-  padding-left: 30px;
-  margin-left: 30px;
-  display: none;
-}*/
 
 #home ul {
   margin: 0;
-
 }
 
 #home ul li {
   margin: inherit;
   font-size: 1.8rem;
-}
-
-#about {
-	background-color: rgba(180, 188, 177, 1); /*green tea green*/
-	color: rgba(23, 31, 44, 1); /*almost black*/
-}
-
-#skills {
-	background-color: rgba(23, 31, 44, 0.8); /*almost black*/
-	color: white;
-}
-
-#work {
-	background-color:  rgba(206, 200, 187, 0.2); /*off white*/
-	color: rgba(23, 31, 44, 1); /*almost black*/
 }
 
 .work-img {
@@ -140,20 +116,118 @@ a:hover {
 
 /* ---- Navigation ---- */
 
+/* Hamburger menu animation from Code Pen https://codepen.io/designcouch/pen/Atyop */
+
 nav {
   position: fixed;
   top: 0;
   left: 0;
-	z-index: 10000;
-  margin: 1rem;
+  z-index: 10000;
+}
+#nav-icon2 {
+  width: 40px;
+  height: 10.5px;
+  margin: 10px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
 
-nav img {
-  height: 3.5rem;
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 7px;
+  width: 50%;
+  background: rgb(120,120,120);
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
+
+#nav-icon2 span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
+  top: 18px;
+}
+
+#nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
+  top: 36px;
+}
+
+#nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon2.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+
+#nav-icon2.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
+}
+
 
 #overlay {
-	background-color: rgba(20, 20, 20, 0.9);
+	background-color: rgba(10,18,20, 0.9);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -192,7 +266,6 @@ section {
 	padding: 7% 7% 7% 12%;
   display: table;
   margin: 0;
-
 }
 
 .container {
@@ -222,10 +295,11 @@ section {
 
 footer {
 	width: 100%;
-	color: rgba(23, 31, 44, 0.8); /*almost black*/
+	/*color: rgba(23, 31, 44, 0.8); /*almost black*/*/
   text-align: center;
   padding: 3%;
-	background-color: rgb(120, 120, 120);
+	color: rgb(120, 120, 120);
+  background-color: rgb(10,18,20);
 }
 
 
@@ -252,16 +326,24 @@ footer {
     /*justify-content: space-around;*/
     /*border: none;
     display: flex;*/
-    margin-top: 30%;
+    /*margin-top: 30%;*/
+    margin-bottom: 7%;
+    margin-right: 7%;
   }
 
 	#home h1 {
 		font-size: 500%;
 	}
 
-  /*#home .vertical-line {
-    display: block;
-  }*/
+  #nav-icon2 {
+    width: 60px;
+    height: 45px;
+    margin: 50px;
+  }
+  #nav-icon2 span {
+  height: 9px;
+}
+
 
 
   #home ul li {
@@ -276,11 +358,11 @@ footer {
 		font-size: 120%;
 	}
 
-	nav {
+	/*nav {
 		padding: 2rem;
 	}
 	nav img {
 		height: 5rem;
-	}
+	}*/
 
 }
